--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,6 @@ jobs:
     - name: Build the Docker image
     run: |
     docker login -u lisi -p 123456 106.74.154.45:8081
-    docker build -t vuedemox:v1 .
-    docker tag vuedemox 106.74.154.45:8081/vuedemox:v1
+    docker build -t vuedemox:v1 ./
+    docker tag vuedemox:v1 106.74.154.45:8081/vuedemox:v1
     docker push 106.74.154.45:8081/vuedemox:v1
